# TurboHiker

./: CMakeLists.txt  README.md  doxygen.sh  main.cpp
Docs/html/: Animation_8h_source.html  EntityFactory_8h_source.html  Entity_8h_source.html  Factory_8h_source.html  Game_8h_source.html  Random_8h_source.html  ScoreObserver_8h_source.html  ScoreSubject_8h_source.html  Scoreboard_8h_source.html  Transformation_8h_source.html  Utils_8h_source.html  World_8h_source.html  annotated.html  classAnimation.html  classEntity.html  classGame-members.html  classGame.html  classTransformation-members.html  classTransformation.html  classes.html  classturbohikerSFML_1_1Animation-members.html  classturbohikerSFML_1_1Animation.html  classturbohikerSFML_1_1Background-members.html  classturbohikerSFML_1_1Background.html  classturbohikerSFML_1_1Background__coll__graph.md5  classturbohikerSFML_1_1Background__inherit__graph.map  classturbohikerSFML_1_1Factory-members.html  classturbohikerSFML_1_1Factory.html  classturbohikerSFML_1_1Factory__inherit__graph.map  classturbohikerSFML_1_1Factory__inherit__graph.md5  classturbohikerSFML_1_1PassingHiker1-members.html  classturbohikerSFML_1_1PassingHiker1.html  classturbohikerSFML_1_1PassingHiker1__coll__graph.map  classturbohikerSFML_1_1PassingHiker1__coll__graph.md5  classturbohikerSFML_1_1PassingHiker1__inherit__graph.map  classturbohikerSFML_1_1PassingHiker1__inherit__graph.md5  classturbohikerSFML_1_1PassingHiker2-members.html  classturbohikerSFML_1_1PassingHiker2.html  classturbohikerSFML_1_1PassingHiker2__coll__graph.map  classturbohikerSFML_1_1PassingHiker2__inherit__graph.md5  (+108 more)
Docs/latex/: annotated.tex  classAnimation.tex  classEntity.tex  classGame.tex  classTransformation.tex  classturbohikerSFML_1_1Animation.tex  classturbohikerSFML_1_1Background.tex  classturbohikerSFML_1_1Background__inherit__graph.md5  classturbohikerSFML_1_1Factory.tex  classturbohikerSFML_1_1Factory__inherit__graph.md5  classturbohikerSFML_1_1PassingHiker1.tex  classturbohikerSFML_1_1PassingHiker1__coll__graph.md5  classturbohikerSFML_1_1PassingHiker1__inherit__graph.md5  classturbohikerSFML_1_1PassingHiker2.tex  classturbohikerSFML_1_1PassingHiker2__inherit__graph.md5  classturbohikerSFML_1_1Player.tex  classturbohikerSFML_1_1Player__coll__graph.md5  classturbohikerSFML_1_1RacingHiker.tex  classturbohikerSFML_1_1RacingHiker__coll__graph.md5  classturbohikerSFML_1_1Scoreboard.tex  classturbohikerSFML_1_1Scoreboard__coll__graph.md5  classturbohikerSFML_1_1Transformation.tex  classturbohiker_1_1Background.tex  classturbohiker_1_1Background__coll__graph.md5  classturbohiker_1_1Background__inherit__graph.md5  classturbohiker_1_1Entity.tex  classturbohiker_1_1EntityFactory.tex  classturbohiker_1_1EntityFactory__inherit__graph.md5  classturbohiker_1_1Entity__inherit__graph.md5  classturbohiker_1_1PassingHiker1.tex  classturbohiker_1_1PassingHiker1__coll__graph.md5  classturbohiker_1_1PassingHiker1__inherit__graph.md5  classturbohiker_1_1PassingHiker2.tex  classturbohiker_1_1PassingHiker2__coll__graph.md5  classturbohiker_1_1PassingHiker2__inherit__graph.md5  classturbohiker_1_1Player.tex  classturbohiker_1_1Player__coll__graph.md5  classturbohiker_1_1Player__inherit__graph.md5  classturbohiker_1_1RacingHiker.tex  classturbohiker_1_1RacingHiker__coll__graph.md5  (+15 more)
Source/: Game.cpp  Game.h  doxygen_config
Source/presentation/: Animation.cpp  Animation.h  Background.cpp  Background.h  Factory.cpp  Factory.h  PassingHiker1.cpp  PassingHiker1.h  PassingHiker2.cpp  PassingHiker2.h  Player.cpp  Player.h  RacingHiker.cpp  RacingHiker.h  Scoreboard.cpp  Scoreboard.h  Transformation.cpp  Transformation.h
Source/turbohiker/: Background.cpp  Background.h  Entity.cpp  Entity.h  EntityFactory.h  PassingHiker1.cpp  PassingHiker1.h  PassingHiker2.cpp  (+15 more)
(+53 files in other folders)
